# msoffice-pptx-rs

./: Cargo.toml  LICENSE  README.md
src/: docprops.rs  document.rs  drawingml.rs  error.rs  errors.rs  helpers.rs  lib.rs  macros.rs  pml.rs  relationship.rs  xml.rs
src/drawingml/: mod.rs
src/pml/: animation.rs  mod.rs  presentation.rs  slides.rs  util.rs
tests/: presentation.xml
