[package]
name = "msoffice_pptx"
version = "0.1.0"
edition = "2018"
description = "pptx file format deserializer"
authors = ["Kalmár Róbert <rfrostkalmar@gmail.com>"]
keywords = ["office", "pptx", "ppt"]
license = "MIT"
repository = "https://github.com/dam4rus/msoffice-pptx-rs.git"
homepage = "https://github.com/dam4rus/msoffice-pptx-rs"
readme = "README.md"
exclude = [
    "tests/presentation.xml",
    "tests/samplepptx.pptx",
]

[dependencies]
quick-xml = "0.13.1"
zip = "0.4.2"
log = "0.4.6"

[dev-dependencies]
simple_logger = "1.0.1"
