[package]
name = "msoffice_pptx"
version = "0.2.1"
edition = "2018"
description = "pptx file format deserializer"
authors = ["Kalmár Róbert <rfrostkalmar@gmail.com>"]
keywords = ["office", "pptx", "ppt"]
license = "MIT"
repository = "https://github.com/dam4rus/msoffice-pptx-rs.git"
homepage = "https://github.com/dam4rus/msoffice-pptx-rs"
readme = "README.md"
exclude = [
    "tests/samplepptx.pptx",
]

[dependencies]
zip = "0.5.2"
log = "0.4.6"
msoffice_shared = "0.1.1"
strum = "0.15.0"
strum_macros = "0.15.0"

[dev-dependencies]
simple_logger = "1.2.0"

[patch.crates-io]
msoffice_shared = { git = "https://github.com/dam4rus/msoffice-shared-rs" }